# get-next-line

./: .dir-locals.el  .env  .gitignore  CMakeLists.txt  Makefile  README.md  README.org  compile_commands.json  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  test.cpp  testFileReading.cpp  testReadingStdin.cpp
example/: main.c
includes/: get_next_line.h  test_get_next_line.hpp
src/: get_next_line.c  get_next_line_utils.c
subject/chats/: chat_1.org
test_files/: 16charLine  3  4  4test  5
tests/: testFileReading.cpp  testReadingStdin.cpp  test_main.cpp
